se agregan mascotas en parse  por medio de newPet modal

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-messages/angular-messages.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -30,8 +31,8 @@
     <script src="js/controllers/meals.js"></script>
     <script src="js/controllers/account.js"></script>
     <script src="js/services/authentication.js"></script>
-    <script src="js/services/meals.js"></script>
-    <script src="js/filters/mealtime.js"></script>
+    <script src="js/services/pets.js"></script>
+  
   </head>
 
   <body ng-app="upet">
